Subo mi iu del details (#122)
