# src/AppForSEII2526.API/DTOs/ReparacionDTOS/ReparacionItemDTO.cs
@@ -15,7 +15,8 @@ namespace AppForSEII2526.API.DTOs.ReparaciónDTO
         public string Descripcion { get; set; }
 
         [DataType(System.ComponentModel.DataAnnotations.DataType.Currency)]
-        public float Precio { get; set; }
+        public float PrecioUnitario { get; set; } // Nombre cambiado
+        public float PrecioTotal { get; set; }
 
         public int Cantidad { get; set; }
 
@@ -26,10 +27,10 @@ namespace AppForSEII2526.API.DTOs.ReparaciónDTO
             IdHerramienta = idHerramienta;
             Descripcion = descripcion;
             Cantidad = cantidad;
-            Precio = precio;
+            PrecioUnitario = precio;
         }
 
-        public ReparacionItemDTO(int idHerramienta, string nombreHerramienta, string nombreFabricante, string tiempoReparacion, float precio, string descripcion, int cantidad)
+        public ReparacionItemDTO(int idHerramienta, string nombreHerramienta, string nombreFabricante, string tiempoReparacion, float precioUnitario, float precioTotal, string descripcion, int cantidad)
         {
             IdHerramienta = idHerramienta;
             NombreHerramienta = nombreHerramienta; // Nuevo
@@ -37,7 +38,8 @@ namespace AppForSEII2526.API.DTOs.ReparaciónDTO
             TiempoReparacion = tiempoReparacion;   // Nuevo
             Descripcion = descripcion;
             Cantidad = cantidad;
-            Precio = precio;
+            PrecioUnitario = precioUnitario;
+            PrecioTotal = precioTotal;
         }
 
         public override bool Equals(object? obj)
@@ -46,13 +48,13 @@ namespace AppForSEII2526.API.DTOs.ReparaciónDTO
                    IdHerramienta == dTO.IdHerramienta &&
                    NombreHerramienta == dTO.NombreHerramienta && 
                    Descripcion == dTO.Descripcion &&
-                   Precio == dTO.Precio &&
+                   PrecioUnitario == dTO.PrecioUnitario &&
                    Cantidad == dTO.Cantidad;
         }
 
         public float CalcularSubtotal()
         {
-            return Cantidad * Precio;
+            return Cantidad * PrecioUnitario;
         }
     }
 }
